# wisp-voice

./: .env.example  .gitignore  AUDIT_REPORT.md  INSTALL_MAC.md  KNOWN_ISSUES.md  README.md  SECURITY.md  WISP_PLAN.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
server/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
server/src/: index.test.ts  index.ts
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json  updater.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: hotkeys.rs  mod.rs  overlay.rs  soundboard.rs  sysinfo.rs  topmost.rs  tray.rs
src/components/: ErrorBoundary.tsx  FriendRequestPopup.tsx  InvitePopup.tsx  MicMeter.tsx  PerformanceButton.tsx  ResourceWidget.tsx  ResourceWidgetInline.tsx  Toggle.tsx  UpdateBanner.tsx
src/components/ui/: slider.tsx  switch.tsx
src/components/wisp/: Avatar.tsx  ChatPanel.tsx  ConnectionStatus.tsx  OverlayPreview.tsx  PTTButton.tsx  PeerCard.tsx  RebindPill.tsx  (+5 more)
src/hooks/: usePresence.ts  useVAD.ts  useVoice.ts
src/lib/: audio.test.ts  audio.ts  devices.ts  friends.test.ts  friends.ts  identity.ts  peerColor.ts  presence.ts  reconnect.ts  rooms.test.ts  rooms.ts  sounds.ts  stress.test.ts  updater.ts  vad.ts  webrtc.test.ts  webrtc.ts
src/overlay/: Overlay.tsx
src/pages/: Home.tsx  Room.tsx  Settings.tsx
src/store/: settingsStore.ts  voiceStore.ts
src/types/: index.ts
src/worklets/: rnnoise-processor.ts
